@@ -1,6 +1,13 @@
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
 	* ATA/ATA.cs:
+	* ATA/Identify.cs:
+	* DiscImageChef.Decoders.csproj:
+	  Rename fields, methods and structs to more adequate names.
+
+2015-10-19  Natalia Portillo  <claunia@claunia.com>
+
+	* ATA/ATA.cs:
 	  Rename SCSI decoders fields, methods and structs to more
 	  adequate names.
 
